force-app/main/default/objects/Mouvement__c/Mouvement__c.object-meta.xml
<CustomObject>
    <label>Mouvement</label>
    <nameField>
        <displayFormat>MV-{00000}</displayFormat>
        <label>Nom de Mouvement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mouvements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>