force-app/main/default/objects/Mouvement__c/fields/Opportunite__c.field-meta.xml
<CustomField>
    <fullName>Opportunite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunité</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Mouvements</relationshipLabel>
    <relationshipName>Mouvements</relationshipName>
    <type>Lookup</type>
</CustomField>