force-app/main/default/objects/Mouvement__c/fields/Quantit__c.field-meta.xml
<CustomField>
    <fullName>Quantit__c</fullName>
    <label>Quantité</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>