force-app/main/default/objects/Mouvement__c/fields/Quantit_sign__c.field-meta.xml
<CustomField>
    <fullName>Quantit_sign__c</fullName>
    <formula>IF(  ISPICKVAL(Sens__c, &quot;Entrée&quot;) ,  Quantit__c ,  Quantit__c *(-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantité signée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>