force-app/main/default/objects/Mouvement__c/fields/Sens__c.field-meta.xml
<CustomField>
    <fullName>Sens__c</fullName>
    <label>Sens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrée</fullName>
            </value>
            <value>
                <fullName>Sortie</fullName>
                <default>true</default>
                <label>Sortie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>